<resources>
    <string name="app_name">FragmentDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="track">Track</string>
    <string name="plans">Plans</string>
    <string name="submit">Submit</string>
    <string name="club_name">Favorite Club is </string>
    <string name="season_prediction">End of Season Prediction is </string>
    <string name="player_name">s Season Prediction! </string>
    <string name="top_three">League Title</string>
    <string name="relegation">Relegation</string>
    <string name="remain_in_division">Remain in Division</string>
    <string name="promotion">Promotion</string>
    <string name="select_your_end_of_season_prediction">Select your end of season prediction.</string>
    <string name="tell_us_your_favorite_club">Tell us your favorite club</string>
    <string name="we_would_like_to_know_your_name">We would like to know your name</string>
    <string name="club_prediction">CLUB PREDICTION</string>
</resources>