<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".HomeFragment">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/club_prediction"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_one"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/we_would_like_to_know_your_name"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            app:layout_constraintVertical_bias="0.15"
            tools:layout_editor_absoluteX="0dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_two"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tell_us_your_favorite_club"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_one">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_two"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/input_layout_two"
            app:layout_constraintTop_toBottomOf="@id/input_layout_two">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_your_end_of_season_prediction"/>

            <RadioButton
                android:id="@+id/option_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_three" />

            <RadioButton
                android:id="@+id/option_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promotion" />

            <RadioButton
                android:id="@+id/option_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remain_in_division" />

            <RadioButton
                android:id="@+id/option_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relegation" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
