<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SubmissionFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:text="@string/hello_blank_fragment"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/name_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/player_name"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:layout_gravity="start">


        <TextView
            android:id="@+id/club_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/club_name"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/track_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:text="@string/hello_blank_fragment"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_gravity="start">

        <TextView
            android:id="@+id/prediction_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/season_prediction"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/radio_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:text="@string/hello_blank_fragment"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>


</LinearLayout>